--- a/app/src/main/res/layout/fragment_user_search_by_voice.xml
+++ b/app/src/main/res/layout/fragment_user_search_by_voice.xml
@@ -183,5 +183,16 @@
             android:layout_marginTop="@dimen/_22sdp"/>
 
     </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        >
+        <androidx.recyclerview.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/rec">
+
+        </androidx.recyclerview.widget.RecyclerView>
+    </LinearLayout>
 
 </LinearLayout>
