Implemented search by voice for guest

--- a/app/src/main/res/layout/fragment_guest_search_by_voice.xml
+++ b/app/src/main/res/layout/fragment_guest_search_by_voice.xml
@@ -41,7 +41,7 @@
                     android:id="@+id/tvSelectedState"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Please say your State"
+                    android:text="Please say your State"
                     android:textColor="@color/textColor1"
                     android:padding="@dimen/_5sdp"
                     android:textSize="@dimen/_13ssp"
@@ -89,7 +89,7 @@
                     android:id="@+id/tvSelectedDistrict"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Please say your District"
+                    android:text="Please say your District"
                     android:textColor="@color/textColor1"
                     android:padding="@dimen/_5sdp"
                     android:textSize="@dimen/_13ssp"
