--- a/app/src/main/res/layout/fragment_user_search_by_voice.xml
+++ b/app/src/main/res/layout/fragment_user_search_by_voice.xml
@@ -41,7 +41,7 @@
                     android:id="@+id/tvSelectedState"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Please say your State"
+                    android:text="Please say your State"
                     android:textColor="@color/textColor1"
                     android:padding="@dimen/_5sdp"
                     android:textSize="@dimen/_13ssp"
@@ -89,7 +89,7 @@
                     android:id="@+id/tvSelectedDistrict"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Please say your District"
+                    android:text="Please say your District"
                     android:textColor="@color/textColor1"
                     android:padding="@dimen/_5sdp"
                     android:textSize="@dimen/_13ssp"
@@ -182,17 +182,6 @@
             android:layout_height="@dimen/_35sdp"
             android:layout_marginTop="@dimen/_22sdp"/>
 
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        >
-        <androidx.recyclerview.widget.RecyclerView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/rec">
-
-        </androidx.recyclerview.widget.RecyclerView>
     </LinearLayout>
 
 </LinearLayout>
